# Backend/routes/user.route.js
@@ -1,5 +1,6 @@
 import express from "express";
-import { registerUser } from "../controller/user.controller.js";
+import { getUserProfile, loginUser, logoutUser, registerUser } from "../controller/user.controller.js";
+import { authUser } from "../middlewares/auth.middleware.js";
 import { body } from "express-validator";
 const userRouter = express.Router();
 
@@ -16,5 +17,20 @@ userRouter.post(
   ],
   registerUser
 );
+
+userRouter.post(
+  "/login",
+  [
+    body("email").isEmail().withMessage("Invalid Email"),
+    body("password")
+      .isLength({ min: 6 })
+      .withMessage("Password must be at least 6 characters long"),
+  ],
+  loginUser
+);
+
+userRouter.get("/profile", authUser, getUserProfile);
+
+userRouter.get("/logout", authUser, logoutUser);
 
 export default userRouter;
